--- a/Appventas/templates/indumentariaFormulario.html
+++ b/Appventas/templates/indumentariaFormulario.html
@@ -4,13 +4,14 @@
 
 {% block bloquecambia %}
 
-    <h2>Formulario - Agregar bicicletas</h2>
+    <h2 class="text-center">Formulario - Agregar Indumentaria</h2>
+    <br><br>
     {% if miFormulario.errors %}
 
     <p style="color: red;"> Están mal los datos, revisar</p>
 
     {% endif %}
-    <form action="" method="POST">{% csrf_token %}
+    <form class="text-center" action="" method="POST">{% csrf_token %}
         
         <!--<p> Marca: <input type="text" name="Marca"></p>
         <p> Modelo : <input type="text" name="Modelo"></p>
@@ -22,10 +23,11 @@
     
         {{ IndumentariaFormularios.as_table}}
         <br>
-    
+        <br>
+        <br>
     
         <input type="submit" value="Enviar">
-
+        <br><br>
     </form>
     
 
