--- a/Appventas/templates/Save.html
+++ b/Appventas/templates/Save.html
@@ -5,9 +5,11 @@
 {% block bloquecambia %}
 
 
-<div class="container px-4 px-lg-1 mt-1">
+<div class="text-center" class="container px-4 px-lg-1 mt-1">
 <h3>DATOS GUARDADOS</h3>
-<div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/Appventas/">VOLVER</a></div>
+<br>
+<br><br>
+<div class="text-center" ><a class="btn btn-outline-dark mt-auto" href="/Appventas/">VOLVER</a></div>
 
-
+<br><br>
 {% endblock bloquecambia %}
