--- a/Appventas/templates/inicio.html
+++ b/Appventas/templates/inicio.html
@@ -6,7 +6,7 @@
 
  
 <div class="container px-4 px-lg-1 mt-1">
-<h3>Formularios para carga de productos</h3>
+<h3 class="text-center">Formularios para carga de productos</h3>
 </div>
 
     
@@ -15,7 +15,7 @@
         <div class="col mb-5">
             <div class="card h-100">
                 <!-- Product image-->
-                <img class="card-img-top" src="templates/BICICLETA.png" alt="..." />
+                
                 <!-- Product details-->
                 <div class="card-body p-4">
                     <div class="text-center">
@@ -35,7 +35,7 @@
                 <!-- Sale badge-->
                 <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem"></div>
                 <!-- Product image-->
-                <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+               
                 <!-- Product details-->
                 <div class="card-body p-4">
                     <div class="text-center">
@@ -53,7 +53,7 @@
         <div class="col mb-5">
             <div class="card h-100">
                 <!-- Product image-->
-                <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+              
                 <!-- Product details-->
                 <div class="card-body p-4">
                     <div class="text-center">
