Agregando config de buscar

--- a/Appventas/templates/biciBusqueda.html
+++ b/Appventas/templates/biciBusqueda.html
@@ -6,7 +6,7 @@
 
     <h2 class="text-center">Buscar Bicicletas</h2>
     <br><br>
-    <form class="text-center" action="/Appventas/buscarbicis/" method="GET">
+    <form class="text-center" action="/buscarbicis/" method="GET">
         
         
         <p> Modelo de Bicicleta : <input type="text" name="Modelo" id="Modelo"></p>
