--- a/Appventas/templates/Padre.html
+++ b/Appventas/templates/Padre.html
@@ -24,15 +24,8 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="/Appventas/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="BusquedaBicis">Buscar</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tablas</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#!">Bicicletas</a></li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#!">Repuestos</a></li>
-                                <li><a class="dropdown-item" href="#!">Indumentaria</a></li>
-                            </ul>
-                        </li>
+                        <li class="nav-item"><a class="nav-link" href="ListaFormularios">Formularios</a></li>
+                        
                     </ul>
                 <!--<form class="d-flex">
                         <button class="btn btn-outline-dark" type="submit">
