--- a/Appventas/templates/inicio.html
+++ b/Appventas/templates/inicio.html
@@ -29,6 +29,7 @@
                     <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="bici_formulario/">CARGAR</a></div>
                 </div>
             </div>
+            <div class="text-center"><a class="section-subheading text-muted" href="LeerBicicletas">Ver Formulario Completo</a></div>
         </div>
         <div class="col mb-5">
             <div class="card h-100">
@@ -49,6 +50,7 @@
                     <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="repu_formulario">CARGAR</a></div>
                 </div>
             </div>
+            <div class="text-center"><a class="section-subheading text-muted" href="LeerRepuestos">Ver Formulario Completo</a></div>
         </div>
         <div class="col mb-5">
             <div class="card h-100">
@@ -67,6 +69,7 @@
                     <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="indu_formulario">CARGAR</a></div>
                 </div>
             </div>
+            <div class="text-center"><a class="section-subheading text-muted" href="Leerindumentria">Ver Formulario Completo</a></div>
         </div>
     </div>
 </div>
