Preparando para buscar datos

--- a/Appventas/templates/inicio.html
+++ b/Appventas/templates/inicio.html
@@ -30,6 +30,8 @@
                 </div>
             </div>
             <div class="text-center"><a class="section-subheading text-muted" href="LeerBicicletas">Ver Formulario Completo</a></div>
+            <br>
+            <div class="text-center"><a class="section-subheading text-muted" href="BusquedaBici">Buscar Bicicleta</a></div>
         </div>
         <div class="col mb-5">
             <div class="card h-100">
@@ -38,19 +40,24 @@
                 <!-- Product image-->
                
                 <!-- Product details-->
-                <div class="card-body p-4">
+                <div class="card-body p-2">
                     <div class="text-center">
                         <!-- Product name-->
                         <h5 class="fw-bolder">REPUESTOS</h5>
-
                     </div>
                 </div>
                 <!-- Product actions-->
-                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                <div class="card-footer p-0 pt-0 border-top-0 bg-transparent">
                     <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="repu_formulario">CARGAR</a></div>
                 </div>
+                
             </div>
+                      
             <div class="text-center"><a class="section-subheading text-muted" href="LeerRepuestos">Ver Formulario Completo</a></div>
+            <br>
+            
+            <div class="text-center"><a class="section-subheading text-muted" href="busquedaBicis">Buscar Repuesto</a></div>
+            
         </div>
         <div class="col mb-5">
             <div class="card h-100">
@@ -70,9 +77,12 @@
                 </div>
             </div>
             <div class="text-center"><a class="section-subheading text-muted" href="Leerindumentria">Ver Formulario Completo</a></div>
+            <br>
+            <div class="text-center"><a class="section-subheading text-muted" href="busquedaBicis">Buscar Indmentaria</a></div>
         </div>
     </div>
 </div>
 </section>
-
+<br>
+<br><br>
 {% endblock bloquecambia %}
