--- a/Appventas/templates/inicio.html
+++ b/Appventas/templates/inicio.html
@@ -26,12 +26,12 @@
                 </div>
                 <!-- Product actions-->
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="bici_formulario/">CARGAR</a></div>
+                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="FormularioBici">CARGAR</a></div>
                 </div>
             </div>
             <div class="text-center"><a class="section-subheading text-muted" href="LeerBicicletas">Ver Formulario Completo</a></div>
             <br>
-            <div class="text-center"><a class="section-subheading text-muted" href="BusquedaBici">Buscar Bicicleta</a></div>
+            <div class="text-center"><a class="section-subheading text-muted" href='BusquedaBici'>Buscar Bicicleta</a></div>
         </div>
         <div class="col mb-5">
             <div class="card h-100">
@@ -56,7 +56,7 @@
             <div class="text-center"><a class="section-subheading text-muted" href="LeerRepuestos">Ver Formulario Completo</a></div>
             <br>
             
-            <div class="text-center"><a class="section-subheading text-muted" href="busquedaBicis">Buscar Repuesto</a></div>
+            <!--<div class="text-center"><a class="section-subheading text-muted" href="busquedaBicis">Buscar Repuesto</a></div>-->
             
         </div>
         <div class="col mb-5">
@@ -78,7 +78,7 @@
             </div>
             <div class="text-center"><a class="section-subheading text-muted" href="Leerindumentria">Ver Formulario Completo</a></div>
             <br>
-            <div class="text-center"><a class="section-subheading text-muted" href="busquedaBicis">Buscar Indmentaria</a></div>
+           <!-- <div class="text-center"><a class="section-subheading text-muted" href="busquedaBicis">Buscar Indmentaria</a></div>-->
         </div>
     </div>
 </div>
