Botones de nuevas busquedas

--- a/Appventas/templates/BusquedaRepu.html
+++ b/Appventas/templates/BusquedaRepu.html
@@ -6,10 +6,10 @@
 
     <h2 class="text-center">Buscar Bicicletas</h2>
     <br><br>
-    <form class="text-center" action="{% url 'Busqueda1' %}" method="GET">
+    <form class="text-center" action="{% url 'Busqueda3' %}" method="GET">
         
         
-        <p>Ingrese el modelo: <input    type="text" name="modelo" ></p>
+        <p>Ingrese el modelo: <input    type="text" name="tipo" ></p>
         
        <br>
     
