--- a/Appventas/templates/inicio.html
+++ b/Appventas/templates/inicio.html
@@ -56,7 +56,7 @@
             <div class="text-center"><a class="section-subheading text-muted" href="LeerRepuestos">Ver Formulario Completo</a></div>
             <br>
             
-            <!--<div class="text-center"><a class="section-subheading text-muted" href="busquedaBicis">Buscar Repuesto</a></div>-->
+            <div class="text-center"><a class="section-subheading text-muted" href="{% url 'Buscar2' %}">Buscar Repuesto</a></div>
             
         </div>
         <div class="col mb-5">
@@ -78,7 +78,7 @@
             </div>
             <div class="text-center"><a class="section-subheading text-muted" href="Leerindumentria">Ver Formulario Completo</a></div>
             <br>
-           <!-- <div class="text-center"><a class="section-subheading text-muted" href="busquedaBicis">Buscar Indmentaria</a></div>-->
+           <div class="text-center"><a class="section-subheading text-muted" href="{% url 'Buscar3' %}">Buscar Indmentaria</a></div>
         </div>
     </div>
 </div>
