se arreglaron las fallas de busqueda. Temas con action y los name. Tema con el render y los contexto

--- a/Appventas/templates/BusquedaBicicleta.html
+++ b/Appventas/templates/BusquedaBicicleta.html
@@ -16,6 +16,10 @@
         <p>No hay resultados.</p>        
         
     {% endif %}
+    <br>
+    <div class="text-center" ><a class="btn btn-outline-dark mt-auto" href="/Appventas/">VOLVER</a></div>
+
+    <br>
         
 
 
