--- a/Appventas/templates/BusquedaIndumentaria.html
+++ b/Appventas/templates/BusquedaIndumentaria.html
@@ -4,7 +4,7 @@
 
 {% block bloquecambia %}
 
-    <p>Se busco la indumentaria: {{tipo}}</p>
+    <h2>Se busco la indumentaria: {{tipo}}</h2>
 
     
     {% if tipo %}
