--- a/Appventas/templates/FormularioRepuestos.html
+++ b/Appventas/templates/FormularioRepuestos.html
@@ -20,8 +20,9 @@
         <p> Fecha de fabricacion : <input type="date" name="Fecha_Fabricacion"></p>
         <p> Precio : <input type ="number"    name="Precio"></p>
         -->
-    
-        {{ RepuestosFormularios.as_table}}
+        <table>
+            {{ RepuestosFormularios.as_table}}
+        </table>
         <br>
         <br>
         <br>
