--- a/Appventas/templates/FormularioBicicletas.html
+++ b/Appventas/templates/FormularioBicicletas.html
@@ -6,15 +6,9 @@
 
     <h2 >Formulario - Agregar bicicletas</h2>
     <br><br>
-    <form  action="" method="POST">{% csrf_token %}
+    <form  class="text-center" action="" method="POST">{% csrf_token %}
         
-        <!--<p> Marca: <input type="text" name="Marca"></p>
-        <p> Modelo : <input type="text" name="Modelo"></p>
-        <p> Rodado : <input type="text" name="Rodado"></p>
-        <p> Color : <input type="text" name="Color"></p>
-        <p> Fecha de fabricacion : <input type="date" name="Fecha_Fabricacion"></p>
-        <p> Precio : <input type ="number"    name="Precio"></p>
-        -->
+       
         <table>
              {{ BiciFormulario.as_table}}
         </table>
