--- a/Appventas/templates/FormularioRepuestos.html
+++ b/Appventas/templates/FormularioRepuestos.html
@@ -13,23 +13,19 @@
     {% endif %}
     <form class="text-center" action="" method="POST">{% csrf_token %}
         
-        <!--<p> Marca: <input type="text" name="Marca"></p>
-        <p> Modelo : <input type="text" name="Modelo"></p>
-        <p> Rodado : <input type="text" name="Rodado"></p>
-        <p> Color : <input type="text" name="Color"></p>
-        <p> Fecha de fabricacion : <input type="date" name="Fecha_Fabricacion"></p>
-        <p> Precio : <input type ="number"    name="Precio"></p>
-        -->
+       
         <table>
             {{ RepuestosFormularios.as_table}}
         </table>
         <br>
         <br>
         <br>
+        
     
-    
-        <input type="submit" value="Enviar">
-        <br><br>
+        <input class="btn btn-outline-dark mt-auto" type="submit" value="Enviar"  href="">
+        <br><br><br>
+        <div class="text-center"><a  class="btn btn-outline-dark mt-auto" href="/Appventas/">Volver</a></div>
+        <br>
     </form>
     
 
