--- a/Appventas/templates/Padre.html
+++ b/Appventas/templates/Padre.html
@@ -23,11 +23,11 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="/Appventas/">Home</a></li>
-                         <!--<li class="nav-item"><a class="nav-link" href="BusquedaBicis">Buscar</a></li>
-                       <li class="nav-item"><a class="nav-link" href="ListaFormularios">Formularios</a></li>-->
+                        <li class="nav-item"><a class="nav-link" href="{% url 'Nosotros' %}">Nosotros</a></li>
+                       <li class="nav-item"><a class="nav-link" href="{% url 'Formularios' %}">Formularios</a></li>
                         
-                    </ul>
-                <!--<form class="d-flex">
+                    </ul><!--
+                <form class="d-flex">
                         <button class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
                             Cart
@@ -37,7 +37,7 @@
                 </div>
             </div>
         </nav>
-        <!-- Header-->
+        <!-- Header--> {% block bloquecambia %}
         <header class="bg-dark py-5">
 
 
@@ -49,7 +49,7 @@
             </div>
         </header>
         
-        {% block bloquecambia %}
+       
 
 
         
