--- a/Appventas/templates/inicio.html
+++ b/Appventas/templates/inicio.html
@@ -3,86 +3,65 @@
 {% load static %}
 
 {% block bloquecambia %}
+<header class="bg-dark py-5">
 
- 
-<div class="container px-4 px-lg-1 mt-1">
-<h3 class="text-center">Formularios para carga de productos</h3>
-</div>
 
-    
-<div class="container px-4 px-lg-5 mt-5">
-    <div class="row">
-        <div class="col mb-5">
-            <div class="card h-100">
-                <!-- Product image-->
-                
-                <!-- Product details-->
-                <div class="card-body p-4">
-                    <div class="text-center">
-                        <!-- Product name-->
-                        <h5 class="fw-bolder">BICICLETAS</h5>
-                        <!-- Product price-->
-                    </div>
-                </div>
-                <!-- Product actions-->
-                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="FormularioBici">CARGAR</a></div>
-                </div>
-            </div>
-            <div class="text-center"><a class="section-subheading text-muted" href="LeerBicicletas">Ver Formulario Completo</a></div>
-            <br>
-            <div class="text-center"><a class="section-subheading text-muted" href='BusquedaBici'>Buscar Bicicleta</a></div>
-        </div>
-        <div class="col mb-5">
-            <div class="card h-100">
-                <!-- Sale badge-->
-                <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem"></div>
-                <!-- Product image-->
-               
-                <!-- Product details-->
-                <div class="card-body p-2">
-                    <div class="text-center">
-                        <!-- Product name-->
-                        <h5 class="fw-bolder">REPUESTOS</h5>
-                    </div>
-                </div>
-                <!-- Product actions-->
-                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="repu_formulario">CARGAR</a></div>
-                </div>
-                
-            </div>
-                      
-            <div class="text-center"><a class="section-subheading text-muted" href="LeerRepuestos">Ver Formulario Completo</a></div>
-            <br>
-            
-            <div class="text-center"><a class="section-subheading text-muted" href="{% url 'Buscar2' %}">Buscar Repuesto</a></div>
-            
-        </div>
-        <div class="col mb-5">
-            <div class="card h-100">
-                <!-- Product image-->
-              
-                <!-- Product details-->
-                <div class="card-body p-4">
-                    <div class="text-center">
-                        <!-- Product name-->
-                        <h5 class="fw-bolder">INDUMENTARIA</h5>
-                      
-                    </div>
-                </div>
-                <!-- Product actions-->
-                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="indu_formulario">CARGAR</a></div>
-                </div>
-            </div>
-            <div class="text-center"><a class="section-subheading text-muted" href="Leerindumentria">Ver Formulario Completo</a></div>
-            <br>
-           <div class="text-center"><a class="section-subheading text-muted" href="{% url 'Buscar3' %}">Buscar Indmentaria</a></div>
+    <div class="container px-4 px-lg-5 my-5">
+        <div class="text-center text-white">
+            <h1 class="display-4 fw-bolder">BICICLETERIA PEPITO</h1>
+            <p class="lead fw-normal text-white-50 mb-0">TODO LO QUE NECESITE Y MAS...</p>
         </div>
     </div>
-</div>
-</section>
-<br>
-<br><br>
+</header>
+ <br>
+ <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+    <div class="row align-items-stretch mb-5">
+        <div class="col-md-6">
+            <div class="form-group">
+                <!-- Name input-->
+                <input class="form-control" id="name" type="text" placeholder="Your Name *" data-sb-validations="required">
+                <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+            </div>
+            <div class="form-group">
+                <!-- Email address input-->
+                <input class="form-control" id="email" type="email" placeholder="Your Email *" data-sb-validations="required,email">
+                <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
+                <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
+            </div>
+            <div class="form-group mb-md-0">
+                <!-- Phone number input-->
+                <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" data-sb-validations="required">
+                <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="form-group form-group-textarea mb-md-0">
+                <!-- Message input-->
+                <textarea class="form-control" id="message" placeholder="Your Message *" data-sb-validations="required"></textarea>
+                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+            </div>
+        </div>
+    </div>
+    <!-- Submit success message-->
+    <!---->
+    <!-- This is what your users will see when the form-->
+    <!-- has successfully submitted-->
+    <div class="d-none" id="submitSuccessMessage">
+        <div class="text-center text-white mb-3">
+            <div class="fw-bolder">Form submission successful!</div>
+            To activate this form, sign up at
+            <br>
+            <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
+        </div>
+    </div>
+    <!-- Submit error message-->
+    <!---->
+    <!-- This is what your users will see when there is-->
+    <!-- an error submitting the form-->
+    <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
+    <!-- Submit Button-->
+    <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">Send Message</button></div>
+</form>
+ 
+ <br><br>
 {% endblock bloquecambia %}
