--- a/Appventas/templates/Save.html
+++ b/Appventas/templates/Save.html
@@ -6,10 +6,10 @@
 
 <br>
 <div class="text-center" class="container px-4 px-lg-1 mt-1">
-<h3>DATOS GUARDADOS</h3>
+<h3>OK! </h3>
 <br>
 <br><br>
-<div class="text-center" ><a class="btn btn-outline-dark mt-auto" href="/Appventas/">VOLVER</a></div>
+<div class="text-center" ><a class="btn btn-outline-dark mt-auto" href="/Appventas/">Presione para continuar.</a></div>
 
 <br><br>
 {% endblock bloquecambia %}
