--- a/Appventas/templates/Padre.html
+++ b/Appventas/templates/Padre.html
@@ -21,13 +21,16 @@
                 <!--<a class="navbar-brand" href="#!">Start Bootstrap</a>-->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4 container">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="/Appventas/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'Nosotros' %}">Nosotros</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'Formularios' %}">Formularios</a></li>
                         
-                    </ul><!--
-                <form class="d-flex">
+                        
+                    </ul>
+                    <a class="btn btn-primary" href="">Ingresar</a>
+                    <!--      
+                <form class="d-flex">  
                         <button class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
                             Cart
@@ -119,11 +122,12 @@
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                <li class="nav-item"><a class="nav-link active text-white aria-current="page" href="{% url 'EnviarMensaje' %}">Contactarse</a></li>
+                <li class="nav-item"><a class="nav-link active text-white aria-current=" href="{% url 'EnviarMensaje' %}">Contactarse</a></li>
                  <!--<li class="nav-item"><a class="nav-link" href="{% url 'Nosotros' %}">Nosotros</a></li>-->
             </ul>
             <div class="container"><p class="m-0 text-center text-white">Martin Goñi & Martin Bisceglia &copy; Coder House 2022</p></div>
         </footer>
+        <p class="text-muted small mb-4 mb-lg-0">CoderHouse Curso Python 2022.</p>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
