--- a/Appventas/templates/BusquedaRepu.html
+++ b/Appventas/templates/BusquedaRepu.html
@@ -4,12 +4,12 @@
 
 {% block bloquecambia %}
 
-    <h2 class="text-center">Buscar Bicicletas</h2>
+    <h2 class="text-center">Buscar Repuesto</h2>
     <br><br>
     <form class="text-center" action="{% url 'Busqueda2' %}" method="GET">
         
         
-        <p>Ingrese el modelo: <input    type="text" name="tipo" ></p>
+        <p>Ingrese el tipo: <input    type="text" name="tipo" ></p>
         
        <br>
     
