--- a/Appventas/templates/BusquedaAccesorios.html
+++ b/Appventas/templates/BusquedaAccesorios.html
@@ -4,13 +4,13 @@
 
 {% block bloquecambia %}
 
-    <h2>Se busco la indumentaria: {{tipo}}</h2>
+    <h2>Se busco los accesorios por tipo: {{tipo}}</h2>
 
     
     {% if tipos %}
         
         {% for item in tipos  %}
-        <li>Codigo: {{item.codigo}}. Tipo: {{item.tipo}}. Marca: {{item.marca}}. Modelo: {{item.modelo}}. Talle: {{item.talle}}. Descripcion: {{item.descripcion}}. Precio: ${{item.precio}}.</li>
+        <li>Codigo: {{item.codigo}}. Marca: {{item.marca}}. Modelo: {{item.modelo}}. Tipo: {{item.tipo}}  Descripcion: {{item.descripcion}}. Precio: ${{item.precio}}.</li>
         {% endfor %}
     {% else %}
         <p>No hay resultados.</p>        
@@ -18,9 +18,8 @@
     {% endif %}
     <br>
     <div class="text-center" ><a class="btn btn-outline-dark mt-auto" href="/Appventas/">VOLVER</a></div>
-    
+
     <br>
-
-
+        
 
 {% endblock bloquecambia %}
