--- a/Appventas/templates/Formularios.html
+++ b/Appventas/templates/Formularios.html
@@ -6,6 +6,7 @@
 <header class="bg-dark py-5">
 
 
+
     <div class="container px-4 px-lg-5 my-5">
         <div class="text-center text-white">
             <h1 class="display-4 fw-bolder">ARTICULOS PARA BICICLETERIAS</h1>
@@ -13,12 +14,69 @@
         </div>
     </div>
 </header>
- 
-<div class="container px-4 px-lg-1 mt-1">
-<h3 class="text-center">Formularios para carga de productos</h3>
+
+<!-- Example single danger button -->
+
+
+<div class="btn-group">
+    <button style= "margin-left: 150px" type="button" class="btn btn" data-bs-toggle="dropdown" aria-expanded="false">
+      Bicicletas
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">Carrera</a></li>
+      <li><a class="dropdown-item" href="#">Mountainbike</a></li>
+      <li><a class="dropdown-item" href="#">BMX</a></li>
+      <li><hr class="dropdown-divider"></li>
+      <li><a class="dropdown-item" href="FormularioBici">Cargar</a></li>
+      <li><a class="dropdown-item" href="LeerBicicletas">Ver</a></li>
+      <li><a class="dropdown-item" href="BusquedaBici">Buscar</a></li>
+    </ul>
+</div>
+<div class="btn-group">
+    <button style= "margin-left: 300px" type="button" class="btn btn" data-bs-toggle="dropdown" aria-expanded="false">
+      Repuestos
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">Asientos</a></li>
+      <li><a class="dropdown-item" href="#">Cables & fundas</a></li>
+      <li><a class="dropdown-item" href="#">Cadenas</a></li>
+      <li><a class="dropdown-item" href="#">Cajas pedaleras</a></li>
+      <li><a class="dropdown-item" href="#">Camaras</a></li>
+      <li><hr class="dropdown-divider"></li>
+      <li><a class="dropdown-item" href="repu_formulario">Cargar</a></li>
+      <li><a class="dropdown-item" href="LeerRepuestos">Ver</a></li>
+      <li><a class="dropdown-item" href="{% url 'Buscar2' %}">Buscar</a></li>
+    </ul>
+</div>
+<div class="btn-group">
+    <button style= "margin-left: 400px" type="button" class="btn btn" data-bs-toggle="dropdown" aria-expanded="false">
+      Accesorios
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">Action</a></li>
+      <li><a class="dropdown-item" href="#">Another action</a></li>
+      <li><a class="dropdown-item" href="#">Something else here</a></li>
+      <li><hr class="dropdown-divider"></li>
+      <li><a class="dropdown-item" href="acc_formulario">Cargar</a></li>
+      <li><a class="dropdown-item" href="LeerAccesorios">Ver</a></li>
+      <li><a class="dropdown-item" href="{% url 'BuscarAcc' %}">Buscar</a></li>
+    </ul>
+</div>
+<div class="btn-group">
+    <button style= "margin-left: 400px" type="button" class="btn btn" data-bs-toggle="dropdown" aria-expanded="false">
+      Indumentaria
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">1</a></li>
+      <li><a class="dropdown-item" href="#">2</a></li>
+      <li><a class="dropdown-item" href="#">3</a></li>
+      <li><hr class="dropdown-divider"></li>
+      <li><a class="dropdown-item" href="indu_formulario">Cargar</a></li>
+      <li><a class="dropdown-item" href="Leerindumentria">Ver</a></li>
+      <li><a class="dropdown-item" href="{% url 'Buscar3' %}">Buscar</a></li>
+    </ul>
 </div>
 
-    
 <div class="container px-4 px-lg-5 mt-5">
     <div class="row">
         <div class="col mb-5">
