--- a/Appventas/templates/Padre.html
+++ b/Appventas/templates/Padre.html
@@ -51,14 +51,9 @@
                 </div>
             </div>
         </header>
-        
-       
-
-
-        
-    
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row">
+                    <!-- CARGAR BICICLETAS-->
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
@@ -77,6 +72,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- CARGAR REPUESTOS-->
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Sale badge-->
@@ -88,7 +84,6 @@
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">REPUESTOS</h5>
-
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -97,6 +92,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- CARGAR INDUMENTARIA-->
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
@@ -106,13 +102,32 @@
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">INDUMENTARIA</h5>
-                                  
                                 </div>
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="bici_formulario/">CARGAR</a></div>
-                            </div>
+                            </div>               
+                        </div>
+                    </div>
+                    <!-- CARGAR ACCESORIOS-->
+                    <div class="row">
+                        <div class="col-4">
+                          <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end">
+                            <nav class="nav nav-pills flex-column">
+                              <a class="nav-link" href="#item-1">Item 1</a>
+                              <nav class="nav nav-pills flex-column">
+                                <a class="nav-link ms-3 my-1" href="#item-1-1">Item 1-1</a>
+                                <a class="nav-link ms-3 my-1" href="#item-1-2">Item 1-2</a>
+                              </nav>
+                              <a class="nav-link" href="#item-2">Item 2</a>
+                              <a class="nav-link" href="#item-3">Item 3</a>
+                              <nav class="nav nav-pills flex-column">
+                                <a class="nav-link ms-3 my-1" href="#item-3-1">Item 3-1</a>
+                                <a class="nav-link ms-3 my-1" href="#item-3-2">Item 3-2</a>
+                              </nav>
+                            </nav>
+                          </nav>
                         </div>
                     </div>
                 </div>
