--- a/Appventas/templates/VerFormulario_Accesorios.html
+++ b/Appventas/templates/VerFormulario_Accesorios.html
@@ -5,9 +5,9 @@
 {% block bloquecambia %}
 
 <div  class="container px-4 px-lg-1 mt-1">
-    <h3>Lista de Repuestos</h3>
+    <h3>Lista de Accesorios</h3>
     <br>
-        {% for Item in Repuestos  %}
+        {% for Item in Accesorios  %}
         <li>Codigo: {{Item.codigo}}. Tipo: {{Item.tipo}}. Marca: {{Item.marca}}. Modelo: {{Item.modelo}}. Descripcion: {{Item.descripcion}}. Precio: ${{Item.precio}}.</li>
         <div>
             <form action="{% url 'Eliminarbici' Item.id %}" method = "POST">{% csrf_token %}
@@ -15,15 +15,12 @@
                  <button type="submit">Eliminar</button>
 
             </form>
-            <button>
-                <a href="{% url 'Editarrepu' Item.id %}">Editar</a>
-           </button>
         </div>
         {% endfor %}
    
     <br><br>
     <br><br>
-    
+    <a href="{% url 'bici_formulario' %}">Agregar otra bicicleta</a>  
         
    <div class="text-center" ><a class="btn btn-outline-dark mt-auto" href="/Appventas/">VOLVER</a></div>
     
