--- a/Appventas/templates/VerFormulario_Bicicletas.html
+++ b/Appventas/templates/VerFormulario_Bicicletas.html
@@ -7,13 +7,31 @@
 <div  class="container px-4 px-lg-1 mt-1">
     <h3>Lista de Bicicletas</h3>
     <br>
-        {% for Item in Bicicletas  %}
-        <li>Marca: {{Item.marca}}. Modelo: {{Item.modelo}}. Rodado: {{Item.rodado}}. Color: {{Item.color}}. Precio: ${{Item.precio}}.</li>
-        {% endfor %}
-        
-    <br><br>
-    <br><br>
+
     
+         
+        {% for Item in Bicicletas %}
+            
+            <li>Codigo: {{Item.codigo}}. Tipo: {{Item.tipo}}. Marca: {{Item.marca}}. Modelo: {{Item.modelo}}. Color: {{Item.color}}. Categoria: {{Item.categoria}} Descripcion: {{Item.descripcion}}. Precio: ${{Item.precio}}.</li>
+            <div>
+                <form action="{% url 'Eliminarbici' Item.id %}" method = "POST">{% csrf_token %}
+                    
+                     <button type="submit">Eliminar</button>
+
+                </form>
+                <button>
+                     <a href="{% url 'Editarbicis' Item.id %}">Editar</a>
+                </button>
+            </div>
+        {% endfor %}
+
+
+    <br>
+
+        
+    
+
+ <a href="{% url 'bici_formulario' %}">Agregar otra bicicleta</a>
         
    <div class="text-center" ><a class="btn btn-outline-dark mt-auto" href="/Appventas/">VOLVER</a></div>
     
