--- a/Appventas/templates/VerFormulario_Indumentaria.html
+++ b/Appventas/templates/VerFormulario_Indumentaria.html
@@ -7,8 +7,15 @@
 <div  class="container px-4 px-lg-1 mt-1">
     <h3>Lista de Indumentaria</h3>
     <br>
-        {% for Item in Indumentaria  %}
-        <li>Tipo: {{Item.tipo}}. Marca: {{Item.marca}}. Modelo: {{Item.modelo}}. Fabricante: {{Item.fabricante}}. Precio: ${{Item.precio}}.</li>
+        {% for item in Indumentaria  %}
+        <li>Codigo: {{item.codigo}}. Tipo: {{item.tipo}}. Marca: {{item.marca}}. Modelo: {{item.modelo}}. Descripcion: {{item.descripcion}}. Precio: ${{item.precio}}.</li>
+        <div>
+            <form action="{% url 'Eliminarindu' item.id %}" method = "POST">{% csrf_token %}
+                
+                 <button type="submit">Eliminar</button>
+
+            </form>
+        </div>
         {% endfor %}
         
     <br><br>
@@ -20,3 +27,13 @@
     <br><br>
 </div>
 {% endblock bloquecambia %}
+
+
+
+<div>
+    <form action="{% url 'Eliminarbici' %}" method ="POST">{% csrf_token %}
+        
+         <button type="submit">Eliminar</button>
+
+    </form>
+</div>
