--- a/Appventas/templates/LoginError.html
+++ b/Appventas/templates/LoginError.html
@@ -6,11 +6,11 @@
 
 <br>
 <div class="text-center" class="container px-4 px-lg-1 mt-1">
-<h3>OK! </h3>
-{{mensaje}}
+<h4>
+{{mensaje}}</h4>
 <br>
 <br><br>
-<div class="text-center" ><a class="btn btn-outline-dark mt-auto" href="/Appventas/">Presione para continuar.</a></div>
+<div class="text-center" ><a class="btn btn-outline-dark mt-auto" href="{% url 'Login' %}">Presione para continuar.</a></div>
 
 <br><br>
 {% endblock bloquecambia %}
