--- a/Appventas/templates/Logout.html
+++ b/Appventas/templates/Logout.html
@@ -7,7 +7,9 @@
 <br>
 <div class="text-center" class="container px-4 px-lg-1 mt-1">
 <h3>OK! </h3>
-{{mensaje}}
+<h2>
+    Te deslogueaste...
+</h2>
 <br>
 <br><br>
 <div class="text-center" ><a class="btn btn-outline-dark mt-auto" href="/Appventas/">Presione para continuar.</a></div>
