--- a/Appventas/templates/Padre.html
+++ b/Appventas/templates/Padre.html
@@ -28,7 +28,28 @@
                         
                         
                     </ul>
-                    <a class="btn btn-primary" href="">Ingresar</a>
+                    
+                    {% if user.is_authenticated %}
+                        <p>Bien venido {{user.username}}</p>
+                        <div class="btn-group">
+                        <button class="btn btn-primary" data-bs-toggle="dropdown" aria-expanded="false" >Usuario</button>
+                                                 
+                            <ul class="dropdown-menu">
+                              <li><a class="dropdown-item" href="{% url 'Perfil' %}">Perfil</a></li>
+                             
+                              <li><hr class="dropdown-divider"></li>
+                              <li><a class="dropdown-item" href="{% url 'Logout' %}">Salir</a></li>
+                              
+                            </ul>
+                        </div>
+
+
+
+                    {% else %}
+                        <a class="btn btn-primary" href="{% url 'Login' %}">Ingresar</a>
+                    {% endif %}
+                        
+                   
                     <!--      
                 <form class="d-flex">  
                         <button class="btn btn-outline-dark" type="submit">
@@ -134,15 +155,27 @@
             </div>
         </section>
         {% endblock bloquecambia %}
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                 <li class="nav-item"><a class="nav-link active text-white aria-current=" href="{% url 'EnviarMensaje' %}">Contactarse</a></li>
                  <!--<li class="nav-item"><a class="nav-link" href="{% url 'Nosotros' %}">Nosotros</a></li>-->
             </ul>
-            <div class="container"><p class="m-0 text-center text-white">Martin Goñi & Martin Bisceglia &copy; Coder House 2022</p></div>
+            
+            <p class="text-white small mb-4 mb-lg-0 ms-lg-4">CoderHouse Curso Python 2022.</p><div class="container"><p class="m-0 text-center text-white">Martin Goñi & Martin Bisceglia &copy; Coder House 2022</p></div>
         </footer>
-        <p class="text-muted small mb-4 mb-lg-0">CoderHouse Curso Python 2022.</p>
+        
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
