--- a/Appventas/templates/Formularios.html
+++ b/Appventas/templates/Formularios.html
@@ -17,9 +17,9 @@
 
 <!-- Example single danger button -->
 
-
+<div class="text-center">
 <div class="btn-group">
-    <button style= "margin-left: 150px" type="button" class="btn btn" data-bs-toggle="dropdown" aria-expanded="false">
+    <button style= "margin-left: 100px" type="button" class="btn btn" data-bs-toggle="dropdown" aria-expanded="false">
       Bicicletas
     </button>
     <ul class="dropdown-menu">
@@ -33,7 +33,7 @@
     </ul>
 </div>
 <div class="btn-group">
-    <button style= "margin-left: 300px" type="button" class="btn btn" data-bs-toggle="dropdown" aria-expanded="false">
+    <button style= "margin-left: 100px" type="button" class="btn btn" data-bs-toggle="dropdown" aria-expanded="false">
       Repuestos
     </button>
     <ul class="dropdown-menu">
@@ -49,7 +49,7 @@
     </ul>
 </div>
 <div class="btn-group">
-    <button style= "margin-left: 400px" type="button" class="btn btn" data-bs-toggle="dropdown" aria-expanded="false">
+    <button style= "margin-left: 100px" type="button" class="btn btn" data-bs-toggle="dropdown" aria-expanded="false">
       Accesorios
     </button>
     <ul class="dropdown-menu">
@@ -63,7 +63,7 @@
     </ul>
 </div>
 <div class="btn-group">
-    <button style= "margin-left: 400px" type="button" class="btn btn" data-bs-toggle="dropdown" aria-expanded="false">
+    <button style= "margin-left: 100px" type="button" class="btn btn" data-bs-toggle="dropdown" aria-expanded="false">
       Indumentaria
     </button>
     <ul class="dropdown-menu">
@@ -75,6 +75,7 @@
       <li><a class="dropdown-item" href="Leerindumentria">Ver</a></li>
       <li><a class="dropdown-item" href="{% url 'Buscar3' %}">Buscar</a></li>
     </ul>
+</div>
 </div>
 
 <div class="container px-4 px-lg-5 mt-5">
