--- a/Appventas/templates/LoginPerfil.html
+++ b/Appventas/templates/LoginPerfil.html
@@ -5,19 +5,26 @@
 {% block bloquecambia %}
 
 <br>
-
-<div class="text-center" class="btn btn-outline-dark mt-auto">
+<h3 style= "margin-left: 50px">Perfil</h3>
+<h4 style= "margin-left: 50px">Bien venido {{user.username}}</h4>
+    <p style= "margin-left: 50px">Datos</p>
+    <p style= "margin-left: 50px">Nombre: {{user.first_name}}</p>
+    <p style= "margin-left: 50px">Apellido: {{user.last_name}}</p>
+    <p style= "margin-left: 50px">Emeail: {{user.email}}</p>
+<div style= "margin-left: 50px" >
     <br>
-    <h3>Perfil</h3>
-    <h4>Bien venido {{user.username}}</h4>
     
-    <form action="" method="POST">
-     {% csrf_token %}
+    
 
-
+    
+    <form  method="POST">{% csrf_token %}
      
+        
+            {{PerfilFormulario.as_p}}
 
-     <button type="submit" class="btn btn-outline-dark mt-auto" >Editar </button>
+        
+        <br>
+        <button type="submit" >Guardar </button>
      
     </form>
     
