--- a/Appventas/templates/LoginRegistro.html
+++ b/Appventas/templates/LoginRegistro.html
@@ -8,6 +8,7 @@
 <div class="container px-4 px-lg-1 mt-1">
     <br>
     <h3>Registrarse</h3>
+    <h6 style="color:#FF0000">{{mensaje}}</h6>
     <form action="" method="POST">
      {% csrf_token %}
 
