--- a/Appventas/templates/Login.html
+++ b/Appventas/templates/Login.html
@@ -10,14 +10,15 @@
     <br>
     <h3>LOGIN</h3>
     <h4>{{mensaje}}</h4>
-    
+    <br>
+    <br>
     <form action="" method="POST">
      {% csrf_token %}
 
 
      {{form.as_p}}
 
-     <button type="submit" class="btn btn-outline-dark mt-auto">Iniciar Sesion </button><a class="btn btn-outline-dark mt-auto" href="{% url 'Registrarse' %}">Registrarse </a>
+     <button type="submit" class="btn btn-outline-dark mt-auto" style="margin-right: 24px">Iniciar Sesion</button><a class="btn btn-outline-dark mt-auto" href="{% url 'Registrarse' %}" style="margin-left: 24px">Registrarse</a>
      
     </form>
     
